# rodalies-cli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: CICD.yaml  ci.yaml
src/: lib.rs  main.rs
src/config/: check.rs  cli.rs  mod.rs
src/rodalies/: client.rs  interactive.rs  mod.rs  station.rs  timetable.rs
tests/: cli.rs
