[package]
name = "rodalies-cli"
version = "0.1.0"
edition = "2021"
authors = ["Gerard C.L. <gerardcl@gmail.com>"]
license = "BSD-3-Clause"
description = "CLI for searching train timetables of the trains of Rodalies de la Generalitat de Catalunya"
readme = "README.md"
homepage = "https://github.com/gerardcl/rodalies-cli"
repository = "https://github.com/gerardcl/rodalies-cli"
keywords = ["cli", "timetables", "trains", "rodalies", "catalunya"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.1", features = ["derive", "unicode"] }
surf = { version = "2.3", features = ["h1-client"] }
tokio = { version = "1.18", features = ["full"] }
scraper = "0.13"
itertools = "0.10"
chrono = "0.4"
prettytable-rs = "0.8"
