[package]
name = "rodalies-cli"
version = "1.0.3"
edition = "2021"
authors = ["Gerard C.L. <gerardcl@gmail.com>"]
license = "BSD-3-Clause"
description = "CLI for searching train timetables of the trains of Rodalies de la Generalitat de Catalunya"
readme = "README.md"
homepage = "https://github.com/gerardcl/rodalies-cli"
repository = "https://github.com/gerardcl/rodalies-cli"
keywords = ["cli", "timetables", "trains", "rodalies", "catalunya"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.2", features = ["unicode", "cargo", "color", "suggestions", "env", "wrap_help"] }
surf = { version = "2.3", features = ["h1-client"] }
tokio = { version = "1.28", features = ["full"] }
scraper = "0.16"
chrono = { version = "0.4", features = []}
prettytable-rs = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
